--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <input type="checkbox"> Check me out
     </label>
   </div>
-  <button type="button" class="btn btn-danger btn-block">Danger</button>
+  <button type="button" class="btn btn-warning btn-block">Danger</button>
 </form>
             
             
